<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="24dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/spartan_extrabold"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textColor="@color/icon_color_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:layout_marginTop="84dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:background="@drawable/input_field_background"
        android:fontFamily="@font/spartan_extrabold"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="@color/text_primary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_field_background"
        android:fontFamily="@font/spartan_extrabold"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:textColor="@color/text_primary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginEmail" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="45dp"
        android:fontFamily="@font/spartan_extrabold"
        android:text="Forgot Password?"
        android:textColor="@color/primary_blue"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginPassword" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="242dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/primary_blue"
        android:fontFamily="@font/spartan_extrabold"
        android:paddingVertical="5dp"
        android:text="Login"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRegister"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="242dp"
        android:layout_height="53dp"
        android:layout_marginTop="104dp"
        android:backgroundTint="#E5DFE6"
        android:fontFamily="@font/spartan_extrabold"
        android:paddingVertical="1dp"
        android:text="Register?"
        android:textAllCaps="false"
        android:textColor="@color/icon_color_dark"
        android:textSize="16sp"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginPassword"
        app:strokeColor="@color/icon_color_dark"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/terms"
        android:layout_width="300dp"
        android:layout_height="47dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/spartan_extrabold"
        android:text="@string/login_terms_and_conditions"
        android:textAlignment="center"
        android:textColor="@color/text_secondary"
        android:textSize="11sp"
        app:layout_constraintBottom_toTopOf="@id/tvVersion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btnToggleLoginPass"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@android:drawable/ic_menu_view"
        app:tint="@color/text_secondary"
        app:layout_constraintBottom_toBottomOf="@id/loginPassword"
        app:layout_constraintEnd_toEndOf="@id/loginPassword"
        app:layout_constraintTop_toTopOf="@id/loginPassword" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/spartan_extrabold"
        android:text="@string/login_version"
        android:textColor="@color/text_secondary"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>