<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/background"

    android:gravity="center">

    <TextView
        android:id="@+id/tvWelcomeGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/spartan_extrabold"
        android:textColor="@color/icon_color_dark"
        android:text="Welcome!"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>


    <Button
        android:id="@+id/buttonRequestService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/primary_blue"
        android:fontFamily="@font/spartan_extrabold"
        android:text="Request a Service"/>

    <Button
        android:id="@+id/buttonViewActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/primary_blue"
        android:fontFamily="@font/spartan_extrabold"
        android:text="View My Service Activity"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogout"
        android:layout_width="125dp"
        android:layout_height="59dp"
        android:layout_marginTop="300dp"
        android:backgroundTint="@color/text_secondary"
        android:fontFamily="@font/spartan_extrabold"
        android:text="Logout"
        android:textColor="@color/white">

    </com.google.android.material.button.MaterialButton>

</LinearLayout>