...
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/spartan_extrabold"
                android:text="@string/home_greeting"
                android:textColor="@color/primary_blue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/btnLogout"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btnLogout"
...
                android:rowCount="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etSearch">

                <LinearLayout
                    android:id="@+id/grid_plumbing"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">
...
                        android:textAlignment="center"
                        android:textColor="@color/icon_color_dark"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/grid_aircond"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">
...
                        android:textColor="@color/icon_color_dark"
                        android:textSize="13sp"
                        android:textAlignment="center"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/grid_electrical"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">
...
                        android:textColor="@color/icon_color_dark"
                        android:textSize="13sp"
                        android:textAlignment="center"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/grid_gas"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">
...
                        android:textColor="@color/icon_color_dark"
                        android:textSize="13sp"
                        android:textAlignment="center"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/grid_appliance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">
...
                        android:textColor="@color/icon_color_dark"
                        android:textSize="13sp"
                        android:textAlignment="center"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/grid_view_all"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="8dp">
...
